Added authentication layer
